[package]
name = "rbxlx-mesh-fixer"
version = "0.1.0"
authors = ["Jack Fox <0xdeadbeef1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom", path = "rbx_binary" }
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom", path = "rbx_xml" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom", path = "rbx_dom_weak" }
rbx_types = { git = "https://github.com/rojo-rbx/rbx-dom", path = "rbx_types" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.9"
byteorder = "1"
regex = "1"

